lbdb (0.18.6) unstable; urgency=low

  * Upgrade to standards version 3.1.1: Add Build-Depends.
  * Hardcode finger and mutt_dotlock in debian/rules, to avoid additional
    Build-Depends.
  * use safe_strdup() instead of strdup() which isn't available on Ultrix.
  * Add lbdb.spec by Horms <horms@vergenet.net>.
  * Add abook support based on an idea by Ross Campbell
    <rcampbel@us.oracle.com>.
  * Add NIS support based on an idea by Ross Campbell
    <rcampbel@us.oracle.com>.
  * Add --enable-lbdb-dotlock to configure options to force using of
    lbdb_dotlock (instead of using mutt_dotlock) and use this option for
    the Debian package (Closes: #58188).
  * Update FSF address in copyrights.
  * Update dotlock code from mutt 1.1.12.

 -- Roland Rosenfeld <roland@debian.org>  Mon,  1 May 2000 11:40:12 +0200

lbdb (0.18.5) unstable; urgency=low

  * Optimized m_gpg to use --with-colons.
  * Remove "Recommends: netstd" (Closes: #49397).
  * Add "Suggests: finger" and test in m_finger whether the finger command
    is available (don't do anything in m_finger, if finger isn't
    available).

 -- Roland Rosenfeld <roland@debian.org>  Sun,  7 Nov 1999 02:51:52 +0100

lbdb (0.18.4) unstable; urgency=low

  * Fixed typo in lbdb-fetchaddr.man.
  * Fixed typo on lbdbq.man (Closes: #48143).

 -- Roland Rosenfeld <roland@debian.org>  Sun, 24 Oct 1999 02:45:46 +0200

lbdb (0.18.3) unstable; urgency=low

  * m_gpg no longer writes error messages to stderr, when the given search 
    string does not exist (Closes: #45422).

 -- Roland Rosenfeld <roland@debian.org>  Sat, 18 Sep 1999 20:40:02 +0200

lbdb (0.18.2) unstable; urgency=low

  * Added HP-UX support (by David Ellement <ellement@sdd.hp.com>): 
    - Try awk (in addition to mawk, gawk, nawk).
    - Don't use "if ! ..." in shell scripts, because ksh in HP-UX doesn't
      support this.
  * Make dotlock.c more portable.
  * Make Makefile.in much more portable.
  * Merge in changes of dotlock program from Mutt 0.96.6.