@@ -5,6 +5,7 @@ lbdb (0.18.6) unstable; urgency=low
     Build-Depends.
   * use safe_strdup() instead of strdup() which isn't available on Ultrix.
   * Add lbdb.spec by Horms <horms@vergenet.net>.
+  * Update the version number in lbdb.spec via configure.
   * Add abook support based on an idea by Ross Campbell
     <rcampbel@us.oracle.com>.
   * Add NIS support based on an idea by Ross Campbell
@@ -14,8 +15,11 @@ lbdb (0.18.6) unstable; urgency=low
     the Debian package (Closes: #58188).
   * Update FSF address in copyrights.
   * Update dotlock code from mutt 1.1.12.
+  * Use /usr/bin/awk instead of /usr/bin/mawk in the Debian package
+    (/usr/bin/awk is handled by alternates mechanism to point to the
+    "optimal" awk replacement).
 
- -- Roland Rosenfeld <roland@debian.org>  Mon,  1 May 2000 11:40:12 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Mon,  8 May 2000 17:07:55 +0200
 
 lbdb (0.18.5) unstable; urgency=low
 
